fix for hiding horizontal overflow

--- a/cyph.com/css/cyph.com.scss
+++ b/cyph.com/css/cyph.com.scss
@@ -9,6 +9,7 @@ html:not(.load-complete) {
 
 section#main {
 	background-color: rgba(139, 98, 217, 0.75) !important;
+	overflow-x: hidden;
 }
 
 #main, #main section {
